@@ -4,6 +4,7 @@ New features:
 A.F....... [ZBX-1357] updated Chinese (China) translation; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+.......P.. [ZBX-6929] fixed updating of lastlogsize and mtime in the proxy's database (Sasha)
 .......P.. [ZBX-6249] fixed data loss in proxy "Data sender" process caused by unfinished transactions; thanks to MATSUDA Daiki for patch (Andris)
 ...G...... [ZBXNEXT-1056] improved active checks error messages (wiper)
 
